2002-06-17  Angus Leeming  <leeming@lyx.org>

	* Toolbar_pimpl.[Ch] (setTooltips): new method. A quick and dirty hack
	to ensure that the tooltips in the toolbar are active at start-up.

2002-06-13  Angus Leeming  <leeming@lyx.org>

	Fixes needed to compile with Compaq cxx 6.3.
	* Color.C:
	* DropDown.C:
	* FormThesaurus.C:
	all c-library variables have been moved into namespace std.
	Wrap using std::xyz declarations inside a #ifndef CXX_GLOBAL_CSTD block.

2002-06-12  Jean-Marc Lasgouttes  <lasgouttes@freesurf.fr>

	* xformsGImage.h: do not rely on FLIMAGE_H_LOCATION anymore

2002-06-07  Jean-Marc Lasgouttes  <lasgouttes@freesurf.fr>

	* xformsGImage.h: fix typo

2002-05-24  Martin Vermeer  <martin.vermeer@hut.fi>

	* FormMathsDelim.C: fix delimiter pre-display rendering 
	  mess-up bug (354)

2002-06-06  Jean-Marc Lasgouttes  <lasgouttes@freesurf.fr>

	* GUIRunTime.C (initialiseGraphics): condition on
	USE_XFORMS_IMAGE_LOADER

	* xformsGImage.C (init_graphics): do not initialize jpeg support
	if not available

2002-06-05  Jean-Marc Lasgouttes  <lasgouttes@freesurf.fr>

	* xformsGImage.h: use FLIMAGE_H_LOCATION instead

2002-06-02  John Levon  <moz@compsoc.man.ac.uk>

	* xformsGImage.h: use FORMS_IMAGE_H_LOCATION
 
2002-06-02  John Levon  <moz@compsoc.man.ac.uk>

	* GUIRunTime.C: 
	* Menubar_pimpl.C: 
	* Tooltips.h:
	* Tooltips.C:
	* xforms_resize.C: check xforms version properly
 
	* xformsGImage.h: include flimage.h too
 
2002-05-10  Herbert Voss  <voss@perce.de>

	* FormInclude.C (input, update): disable load-button when 
	"use verbatim" is enabled

2002-05-28  Jean-Marc Lasgouttes  <lasgouttes@freesurf.fr>

	* FormDocument.C (input): set preamble too when saving default
	template. 

2002-05-15  John Levon  <moz@compsoc.man.ac.uk>

	* FormCharacter.C: avoid mis-treating Combox as FL_OBJECT
	  (bug 406) (from Angus)
 
2002-05-10  Dekel Tsur  <dekelts@tau.ac.il>

	* FormDocument.C (language_apply): Fix language changing.
