@@ -1,3 +1,9 @@
+2002-06-18  John Levon  <moz@compsoc.man.ac.uk>
+
+	* FormSearch.h:
+	* FormSearch.C: highlight the search on opening
+	  the dialog (bug 77)
+ 
 2002-06-17  Angus Leeming  <leeming@lyx.org>
 
 	* Toolbar_pimpl.[Ch] (setTooltips): new method. A quick and dirty hack
